force-app/main/default/objects/LiveChatTranscript/fields/Save_Continue_Missing__c.field-meta.xml
<CustomField>
    <fullName>Save_Continue_Missing__c</fullName>
    <description>Visitor selected Save and Continue button missing during chatbot session</description>
    <inlineHelpText>Visitor selected Save and Continue button missing during chatbot session</inlineHelpText>
    <label>Save|Continue Missing</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>