force-app/main/default/objects/LiveChatTranscript/fields/Spon_TTEE_Update__c.field-meta.xml
<CustomField>
    <fullName>Spon_TTEE_Update__c</fullName>
    <description>Visitor requested info on updating Sponsor or Trustee during chatbot session</description>
    <inlineHelpText>Visitor requested info on updating Sponsor or Trustee during chatbot session</inlineHelpText>
    <label>Spon|TTEE Update</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>