force-app/main/default/objects/LiveChatTranscript/fields/Submit_a_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Submit_a_Ticket__c</fullName>
    <description>1 = Client requested instructions to submit a ticket during Chatbot session</description>
    <inlineHelpText>1 = Client requested instructions to submit a ticket during Chatbot session</inlineHelpText>
    <label>Submit a Ticket</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>