force-app/main/default/objects/LiveChatTranscript/fields/Tax_Forms__c.field-meta.xml
<CustomField>
    <fullName>Tax_Forms__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Tax Forms</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>