force-app/main/default/objects/LiveChatTranscript/fields/Transfer_Successful__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Successful__c</fullName>
    <description>1 = Client requested transfer from Bot to Live Agent and it was transferred Successfully</description>
    <inlineHelpText>1 = Client requested transfer from Bot to Live Agent and it was transferred Successfully</inlineHelpText>
    <label>Transfer Successful</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>