force-app/main/default/objects/LiveChatTranscript/fields/Transfer_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Agent__c</fullName>
    <description>1 = Chat resulted in request to transfer to agent.</description>
    <inlineHelpText>1 = Chat resulted in request to transfer to agent.</inlineHelpText>
    <label>Transfer to Agent</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>