force-app/main/default/objects/LiveChatTranscript/fields/Transfer_Unsuccessful__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Unsuccessful__c</fullName>
    <description>1 = Client requested transfer from the ChatBot to Live Agent but no agents were available</description>
    <inlineHelpText>1 = Client requested transfer from the ChatBot to Live Agent but no agents were available</inlineHelpText>
    <label>Transfer Unsuccessful</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>