force-app/main/default/objects/LiveChatTranscript/fields/Under_50_contribution_limit__c.field-meta.xml
<CustomField>
    <fullName>Under_50_contribution_limit__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Under 50 contribution limit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>