force-app/main/default/objects/LiveChatTranscript/fields/Update_Comp__c.field-meta.xml
<CustomField>
    <fullName>Update_Comp__c</fullName>
    <description>Visitor requested info on updating compensation during chatbot session</description>
    <inlineHelpText>Visitor requested info on updating compensation during chatbot session</inlineHelpText>
    <label>Update Comp</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>