force-app/main/default/objects/LiveChatTranscript/fields/Update_Hours__c.field-meta.xml
<CustomField>
    <fullName>Update_Hours__c</fullName>
    <description>Visitor requested info on updating hours worked during chatbot session</description>
    <inlineHelpText>Visitor requested info on updating hours worked during chatbot session</inlineHelpText>
    <label>Update Hours</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>