force-app/main/default/objects/LiveChatTranscript/fields/Update_SSN__c.field-meta.xml
<CustomField>
    <fullName>Update_SSN__c</fullName>
    <description>Visitor requested info on updating SSN during chatbot session</description>
    <inlineHelpText>Visitor requested info on updating SSN during chatbot session</inlineHelpText>
    <label>Update SSN</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>