force-app/main/default/objects/LiveChatTranscript/fields/Website_Problem__c.field-meta.xml
<CustomField>
    <fullName>Website_Problem__c</fullName>
    <description>Auto flag chats where client selects Report a Website Problem</description>
    <inlineHelpText>Auto flag chats where client selects Report a Website Problem</inlineHelpText>
    <label>Website Problem</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>