force-app/main/default/objects/LiveChatTranscript/fields/What_is_1099R__c.field-meta.xml
<CustomField>
    <fullName>What_is_1099R__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>What is 1099R</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>