force-app/main/default/objects/LiveChatTranscript/fields/Withdrawal_Status__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Status__c</fullName>
    <description>Visitor selected &quot;Check my withdrawal status&quot; during chatbot session</description>
    <inlineHelpText>Visitor selected &quot;Check my withdrawal status&quot; during chatbot session</inlineHelpText>
    <label>Withdrawal Status</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>