force-app/main/default/objects/LiveChatTranscript/fields/X1099R_missing_in_mail__c.field-meta.xml
<CustomField>
    <fullName>X1099R_missing_in_mail__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>1099R missing in mail</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>