force-app/main/default/objects/LiveChatTranscript/fields/X50_and_over_contribution_limit__c.field-meta.xml
<CustomField>
    <fullName>X50_and_over_contribution_limit__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>50 and over contribution limit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>