force-app/main/default/objects/LiveChatTranscript/fields/X5500_Filing_Complete__c.field-meta.xml
<CustomField>
    <fullName>X5500_Filing_Complete__c</fullName>
    <label>5500 Filing Complete?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>