force-app/main/default/objects/LiveChatTranscript/fields/X5500_Financial_Info__c.field-meta.xml
<CustomField>
    <fullName>X5500_Financial_Info__c</fullName>
    <label>5500 Financial Info</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>