force-app/main/default/objects/LiveChatTranscript/fields/X5500_How_to_File__c.field-meta.xml
<CustomField>
    <fullName>X5500_How_to_File__c</fullName>
    <label>5500 How to File</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>