force-app/main/default/objects/LiveChatTranscript/fields/X5500_Late_Filing__c.field-meta.xml
<CustomField>
    <fullName>X5500_Late_Filing__c</fullName>
    <label>5500 Late Filing</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>