force-app/main/default/objects/LiveChatTranscript/fields/X5500_Number_Address__c.field-meta.xml
<CustomField>
    <fullName>X5500_Number_Address__c</fullName>
    <label>5500 Number Address</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>