force-app/main/default/objects/LiveChatTranscript/fields/X5500_Recipient_Biz_Code__c.field-meta.xml
<CustomField>
    <fullName>X5500_Recipient_Biz_Code__c</fullName>
    <label>5500 Recipient Biz Code</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>