force-app/main/default/objects/LiveChatTranscript/fields/X5500_Signed_Copy__c.field-meta.xml
<CustomField>
    <fullName>X5500_Signed_Copy__c</fullName>
    <label>5500 Signed Copy</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>