force-app/main/default/objects/LiveChatTranscript/fields/X5500_Signing_Credentials__c.field-meta.xml
<CustomField>
    <fullName>X5500_Signing_Credentials__c</fullName>
    <label>5500 Signing Credentials</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>