force-app/main/default/objects/LiveChatTranscript/fields/X5500_When_do_I_get_it__c.field-meta.xml
<CustomField>
    <fullName>X5500_When_do_I_get_it__c</fullName>
    <label>5500 When do I get it</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>