force-app/main/default/objects/LiveChatTranscript/fields/X59_Cash__c.field-meta.xml
<CustomField>
    <fullName>X59_Cash__c</fullName>
    <description>Employed under 59 1/2 requested cash withdrawal info during chatbot session</description>
    <inlineHelpText>Employed under 59 1/2 requested cash withdrawal info during chatbot session</inlineHelpText>
    <label>&lt; 59 1/2 Cash</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>