force-app/main/default/objects/LiveChatTranscript/recordTypes/Live_Chat_Transcript_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Live_Chat_Transcript_Record_Type</fullName>
    <active>true</active>
    <label>Live Chat Transcript Record Type</label>
</RecordType>