force-app/main/default/objects/LiveChatTranscript/listViews/My_Chat_Transcripts.listView-meta.xml
<ListView>
    <fullName>My_Chat_Transcripts</fullName>
    <columns>Name</columns>
    <columns>Case</columns>
    <columns>Contact</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>LiveChatButton</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <label>My Chat Transcripts</label>
</ListView>