force-app/main/default/objects/LiveChatTranscript/listViews/UBQT_Sales_Chat_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>UBQT_Sales_Chat_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>UBQT Sales Chat</label>
    <queue>UBQT_Sales_Chat</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>